--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">GodEye</string>
+    <string name="douban_url">https://rsshub.app/douban/movie/playing</string>
 </resources>
